<?xml version="1.0"?>
<package format="2">
  <name>kumonoito</name>
  <version>0.0.0</version>
  <description>The kumonoito package</description>

  <maintainer email="naveenoid@todo.todo">naveenoid</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>ros_drake</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>tinyxml2</build_depend> <!-- REMOVE THIS -->
  <build_depend>libglib-dev</build_depend> <!-- REMOVE THIS -->
  <build_export_depend>roscpp</build_export_depend>

  <exec_depend>drake</exec_depend>

  <export>
  </export>
</package>
